Use standard header in template

--- a/templates/sudoers.erb
+++ b/templates/sudoers.erb
@@ -1,5 +1,5 @@
-# This file is managed by puppet
-# Any changes will be overwritten
+# This file is being maintained by Puppet.
+# DO NOT EDIT
 
 Defaults    <% unless @requiretty_real -%><%= "!" %><% end -%>requiretty
 Defaults    <% unless @visiblepw_real -%><%= "!" %><% end -%>visiblepw
