--- a/templates/sudoers.erb
+++ b/templates/sudoers.erb
@@ -12,6 +12,9 @@ Defaults    secure_path = <%= @secure_path %>
 <% if @include_libsudo_vas_real -%>
 Defaults    group_plugin="<%= @libsudo_vas_location_real %>"
 <% end -%>
+<% if @always_query_group_plugin_real -%>
+Defaults    always_query_group_plugin
+<% end -%>
 <% if @root_allow_all_real -%>
 root  ALL=(ALL)   ALL
 <% end -%>
