--- a/templates/sudoers.erb
+++ b/templates/sudoers.erb
@@ -10,7 +10,7 @@ Defaults    env_keep = "<%= @envkeep.join(" ") %>"
 <% end -%>
 Defaults    secure_path = <%= @secure_path %>
 <% if @include_libsudo_vas -%>
-Defaults    group_plugin="<%= @libsudo_vas_location_real %>"
+Defaults    group_plugin="<%= @libsudo_vas_location %>"
 <% end -%>
 <% if @always_query_group_plugin_real -%>
 Defaults    always_query_group_plugin
